# dating_app

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci-workflow.yml  codeql-analysis.yml
badges/: create_readme_badges.py
dating_app/: Makefile  main.py  services.py
dating_app/api/chat/: chat.py
dating_app/api/user/: user.py
dating_app/chat/: ConnectionManager.py
dating_app/core/: ConnectionManager.py  websocket.py
dating_app/db/: __init__.py  database.py  database_test_info.py
dating_app/schemas/: ChatModel.py  MongoModel.py  User.py
dating_app/static/: brand.css  chat.css  chat.js  edit.js  index.js  search.js
dating_app/templates/: base.html  chat.html  chat_modal.html  edit_profile.html  head.html  index.html  items.html  login_modal.html  registration_modal.html  search.html  search_card.html
pages/: __init__.py  index.py  search.py
tests/: Makefile  __init__.py  test_dating_app.py  test_main.py  test_services.py
tests/gui_tests/: test_0_selenium.py  test_gui.py  test_main_gui.py  test_searchpage_gui.py
