[tool.poetry]
name = "dating_app"
version = "0.1.0"
description = ""
authors = ["Humzah Javid <HumzahJavid@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.0"
pytest = "^5.2"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pre-commit = "^2.17.0"
regex = "^2021.11.2"
tox = "^3.24.4"
hooks = {git = "https://github.com/stfc/pre-commit-hooks", tag = "v0.3.0"}
pylint = "^2.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
