[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dating_app"
version = "0.1.0"
description = ""
authors = ["Humzah Javid <HumzahJavid@users.noreply.github.com>"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
[[tool.mypy.overrides]]
module = [ "uvicorn" ]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip = [ "build_seq.py", "conf.py",]
float_to_top = true
[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
Jinja2 = "^3.1.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"
mypy-extensions = "^0.4.3"
pre-commit = "^2.18.1"
pylint = "^2.13.3"
regex = "^2021.11.10"
colorama = "^0.4.4"

[tool.pylint.master]
persistent = "yes"

[tool.pylint.messages_control]
max-line-length = 88
disable = [ "wrong-hanging-indentation", "bad-whitespace",]
output-format = "colorized"
ignored_modules = [ "fpdf",]

[tool.pylint.basic]
good-names = [ "i", "j", "k", "e", "df", "n", "t",]

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.17.6"

[tool.poetry.dev-dependencies.hooks]
git = "https://github.com/stfc/pre-commit-hooks"
tag = "v0.3.0"
