[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dating_app"
version = "0.1.0"
description = ""
authors = ["Humzah Javid <HumzahJavid@users.noreply.github.com>"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
exclude = [
    'mongodb/'
]
[[tool.mypy.overrides]]
module = [ "uvicorn", "requests", "motor", "motor.motor_asyncio", "bson",]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip = [ "build_seq.py", "conf.py",]
float_to_top = true

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
Jinja2 = "^3.1.1"
toml = "^0.10.2"
anybadge = "^1.9.0"
motor = "^2.5.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"
mypy-extensions = "^0.4.3"
pre-commit = "^2.18.1"
pylint = "^2.13.3"
pytest = "^7.1.1"
regex = "^2021.11.10"
tox = "^3.24.5"
colorama = "^0.4.4"
requests = "^2.27.1"
pytest-env = "^0.6.2"
flake8-formatter-junit-xml = "^0.0.6"
pytest-cov = "^3.0.0"
pytest-json-report = "^1.5.0"
email-validator = "^1.1.3"

[tool.pylint.master]
persistent = "yes"
extension-pkg-whitelist="pydantic"

[tool.pylint.messages_control]
max-line-length = 88
disable = [ "wrong-hanging-indentation", "bad-whitespace",]
output-format = "colorized"
ignored_modules = [ "fpdf",]

[tool.pylint.basic]
good-names = [ "i", "j", "k", "e", "df", "n", "t",]

[tool.pytest.ini_options]
env = [ "PY_COLORS = 1",]

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.17.6"

[tool.poetry.dev-dependencies.hooks]
git = "https://github.com/stfc/pre-commit-hooks"
tag = "v0.3.0"

[tool.poetry.dev-dependencies.tox-poetry-installer]
extras = [ "poetry",]
version = "^0.8.3"
